making sure styles work in desktop app

--- a/packages/renderer/index.html
+++ b/packages/renderer/index.html
@@ -3,10 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
-    <link
-      rel="icons"
-      href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
-    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       http-equiv="Content-Security-Policy"
@@ -15,7 +11,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app" style="height: 100vh"></div>
+    <div id="app"></div>
     <script>
       var exports = { __esModule: true };
     </script>
