trying to fix assets

--- a/packages/renderer/index.html
+++ b/packages/renderer/index.html
@@ -12,6 +12,7 @@
     <script>
       window["CESIUM_BASE_URL"] = "/lib/Cesium/";
     </script>
+    <base href="./" />
     <link rel="stylesheet" href="/lib/Cesium/Widgets/widgets.css" />
     <title>Touchboard Apps</title>
   </head>
